src/test/ui/linkage-attr/linkage2.stderr
error: must have type `*const T` or `*mut T` due to `#[linkage]` attribute
  --> $DIR/linkage2.rs:9:32
   |
LL |     #[linkage = "extern_weak"] static foo: i32;
   |                                ^^^^^^^^^^^^^^^^

error: aborting due to previous error

